# C-projects

Bash_Utils/: TASK.md
Bash_Utils/src/cat/: Makefile  s21_cat.c  s21_cat.h
Bash_Utils/src/cat/cat_test/: diff_test.sh  test.txt  test2.txt
Bash_Utils/src/grep/: Makefile  s21_grep.c  s21_grep.h
Bash_Utils/src/grep/tests_grep/: diff_test.sh  find.txt  find1.txt  g_test  g_test1  g_test2
Decimal_library/: .gitignore  TASK.md
Decimal_library/src/: Makefile  s21_arithmetic.c  s21_comparison.c  s21_converters.c  s21_decimal.h  s21_getset.c  s21_other.c  s21_utils.c  testing.c
Decimal_library/src/unit_tests/: make_add_tests.py  make_mul_tests.py  make_sub_tests.py  test.c  test_add.c  test_mul.c  test_sub.c
Matrix_library/: TASK.md
Matrix_library/src/: Makefile  s21_matrix.c  s21_matrix.h  tests_s21_matrix.c
SmartCalc_C/: TASK.md
SmartCalc_C/src/: Makefile  s21_calculate.c  s21_creditcalc.c  s21_deposit_calc.c  s21_rpn.c  s21_rpn.h  s21_stack.c
SmartCalc_C/src/run_calc/: CMakeLists.txt  anotherwindow.cpp  creditwindow.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
String_library/: TASK.md
String_library/src/: s21_sscanf.c  s21_sscanf.h  s21_strchr.c  s21_strncpy.c  s21_trim.c
